--- a/ProgrammingPractice.csproj
+++ b/ProgrammingPractice.csproj
@@ -57,6 +57,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GameObject.cs" />
+    <Compile Include="MeatParticle.cs" />
     <Compile Include="MousePos.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Player.cs" />
@@ -84,6 +85,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="UpdateLabels.cs" />
+    <Compile Include="Walker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
